laborations/lab1/testsuite/bad/bad013.cc
return foo(double x) {
	return x + 9;
}
